Fix address overflow in mobile view

--- a/packages/react-app/src/styles/style.scss
+++ b/packages/react-app/src/styles/style.scss
@@ -105,6 +105,10 @@ button {
   width: 100%;
 }
 
+.max-width-100 {
+  max-width: 100%;
+}
+
 .flex-grow {
   flex-grow: 1;
 }
